--- a/src/app.css
+++ b/src/app.css
@@ -1,10 +1,22 @@
+body {
+  font-family: "Roboto", sans-serif;
+  background-color: rgb(233, 233, 233);
+}
+main {
+  margin: 0 auto;
+  margin-top: 100px;
+  width: 550px;
+  border: 2px solid #485806;
+  border-radius: 5px;
+  background-color: white;
+}
 main,
 h1 {
   text-align: center;
-  margin-top: 50px;
 }
 
 .button {
+  margin: 20px 0 30px;
   width: 150px;
   font-weight: 500;
   font-size: 20px;
@@ -16,9 +28,8 @@ h1 {
   border: none;
   border-radius: 5px;
   transition: all 250ms;
+  font-family: inherit;
 }
 .button:hover {
-  color: black;
   background-color: #93ad18;
-  font-weight: 600;
 }
