--- a/src/app.css
+++ b/src/app.css
@@ -1,11 +1,13 @@
 body {
   font-family: "Roboto", sans-serif;
   background-color: rgb(233, 233, 233);
+  padding: 0 10px;
 }
 main {
   margin: 0 auto;
+  padding: 0 15px;
   margin-top: 100px;
-  width: 550px;
+  max-width: 550px;
   border: 2px solid #485806;
   border-radius: 5px;
   background-color: white;
@@ -32,4 +34,17 @@ h1 {
 }
 .button:hover {
   background-color: #93ad18;
+}
+
+.button:focus-visible {
+  background-color: #93ad18;
+  border: solid 2px black;
+  transition: all 0ms;
+  outline: none;
+}
+
+.button:active {
+  transform: scale(0.98);
+  border: none;
+  transition: all 0ms;
 }
